# python-cookiecutter

./: .pre-commit-config.yaml  README.md  cookiecutter.json
{{ cookiecutter.package_name }}/: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
{{ cookiecutter.package_name }}/src/{{ cookiecutter.__package_slug }}/: __main__.py  __test_demo.py  main.py
{{ cookiecutter.package_name }}/tests/: conftest.py  test_demo.py
{{ cookiecutter.project_name }}/: README.md  noxfile.py  pyproject.toml
{{ cookiecutter.project_name }}/src/{{ cookiecutter.project_src }}/: __main__.py  __test_demo.py
{{ cookiecutter.project_name }}/tests/: test_demo.py
{{ cookiecutter.project_name }}/tests/fixtures/platform_fixtures/: __fixtures.py  __init__.py
